<resources>
    <string name="app_name">CourtCounter</string>

    <!-- TeamA Label-->
    <string name="label_teamA">Team A</string>

    <!-- Team Score -->
    <string name="score_card">0</string>

    <!-- Button Text Score Value -->
    <string name="score_three">+3 Points</string>
    <string name="score_two">+2 Points</string>
    <string name="free_throw">Free Throw</string>

    <!--TeamB Label -->
    <string name="label_teamB">Team b</string>

    <!--Rest Button Text -->
    <string name="reset_text">Reset</string>
</resources>
