<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/label_teamA"
                android:textColor="@color/color_teams"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom"
                android:text="@string/score_card"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_board" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamA"
                android:text="@string/score_three" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addTowForTeamA"
                android:text="@string/score_two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw" />

        </LinearLayout>

        <view
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_view"
            android:background="@android:color/darker_gray">


        </view>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/label_teamB"
                android:textColor="@color/color_teams"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/padding_bottom"
                android:text="@string/score_card"
                android:textColor="@color/score_color"
                android:textSize="@dimen/score_board" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamB"
                android:text="@string/score_three" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addTowForTeamB"
                android:text="@string/score_two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throw" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="@dimen/reset_margin"
        android:layout_marginRight="@dimen/reset_margin"
        android:onClick="resetScore"
        android:text="@string/reset_text" />
</RelativeLayout>
